# talaria

./: Cargo.toml  README.md
android/: settings.gradle
android/app/: .gitignore  build.gradle
android/app/src/androidTest/java/org/kwak/talaria/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/kwak/talaria/: MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/org/kwak/talaria/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
src/: main.rs
test_lib/: Cargo.toml
test_lib/scripts/: android_build.sh
test_lib/src/: lib.rs
