[package]
name = "test_lib"
version = "0.1.0"
authors = ["expectocode <expectocode@gmail.com>"]
edition = "2018"

[lib]
name = "test_lib"
crate-type = ["cdylib"]

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.13.1", default-features = false }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
